sass/styles.scss
@font-face {
  font-family: Prez;
  src: url(../AccidentalPresidency.ttf);
}

body#index {
  .overlay {
    position: absolute;
    z-index: 1;
    background-color: #2b2b2b;
    height: 100vh;
    width: 100vw;
    iframe {
      position: absolute;
      z-index: 2;
    }
    a {
      position: absolute;
      z-index: 3;
      margin: 0;
      bottom: 0;
      text-decoration: none;
      color: #ecf0f1;
      background-color: #2980b9;
      padding: 5px 10px;
      font-size: 30px;
      transition: 300ms;
      font-family: "Prez", sans-serif;
      &:hover {
        background-color: #ecf0f1;
        color: #2980b9;
      }
    }
  }
  background-color: #2c3e58;
  background-image: url(../img/Awais.jpg);
  background-size: cover;
  background-position: center center;
  max-height: 100vh;
  .container {
    visibility: hidden;
    &.show {
      visibility: visible !important;
    }
    .content {
      height: 100vh;
      position: relative;
      bottom: 10vh;
      display: flex;
      justify-content: flex-end;
      align-items: flex-start;
      flex-direction: column;
      .hero {
        margin: 15px 0;
        display: block;
        transition: 300ms;
        h1 {
          padding: 5px 10px;
          background-color: #e74c3c;
          color: #ecf0f1;
          font-family: "Prez", sans-serif;
          font-size: 90px;
          display: inline;
          transition: 300ms;
        }
        h2 {
          padding: 5px 10px;
          background-color: #ecf0f1;
          color: #2980b9;
          font-size: 70px;
          display: inline;
          font-family: "Prez", sans-serif;
          transition: 300ms;
        }
      }
      ul {
        padding: 0;
        margin: 0;
        li {
          display: inline;
          margin-right: 5px;
          a {
            margin: 0;
            text-decoration: none;
            color: #ecf0f1;
            background-color: #2980b9;
            padding: 5px;
            font-size: 50px;
            transition: 300ms;
            font-family: "Prez", sans-serif;
            &:hover {
              background-color: #ecf0f1;
              color: #2980b9;
            }
          }
        }
      }
    }
  }
}

@media (max-width: 660px) and (min-width: 540px) {
  .hero {
    margin: 10px 0 !important;
    h1 {
      font-size: 70px !important;
    }
    h2 {
      font-size: 50px !important;
    }
    a {
      font-size: 40px !important;
    }
  }
}

@media (max-width: 540px) {
  .hero {
    margin: 8px 0 !important;
    h1 {
      font-size: 60px !important;
    }
    h2 {
      font-size: 40px !important;
    }
    a {
      font-size: 30px !important;
    }
  }
}

@media (max-width: 430px) {
  .hero {
    margin: 8px 0 !important;
    h1 {
      font-size: 40px !important;
    }
    h2 {
      font-size: 30px !important;
    }
    li {
      margin-right: 2px !important;
      a {
        font-size: 18px !important;
      }
    }
  }
}

/////////////////////////////////////////////////////

.pagehead {
  padding: 50px 0;
  background-image: url(../img/blur.jpg);
  background-size: cover;
  background-position: center center;
  width: 100%;
  background-color: #2b2b2b;
  h1 {
    text-align: center;
    background-color: #e74c3c;
    color: #ecf0f1;
    font-family: "Prez", sans-serif;
    font-size: 90px;
    transition: 300ms;
    letter-spacing: 5px;
  }
  .link {
    text-align: center;
    a {
      white-space: nowrap;
      background-color: #2980b9;
      margin: 0;
      text-decoration: none;
      color: #ecf0f1;
      padding: 5px 15px;
      font-size: 50px;
      transition: 300ms;
      font-family: "Prez", sans-serif;
      &:hover {
        background-color: #ecf0f1;
        color: #2980b9;
      }
    }
  }
}

@media (max-width: 790px) and (min-width: 550px) {
  .pagehead {
    h1 {
      font-size: 50px !important;
    }
    a {
      font-size: 30px !important;
    }
  }
}

@media (max-width: 550px) and (min-width: 0px) {
  .pagehead {
    h1 {
      font-size: 30px !important;
    }
    a {
      font-size: 15px !important;
    }
  }
}

////////////////////////////////////////////////////
body#vision {
  .content .row {
    padding: 20px 0;
    h1 {
      font-family: "Prez", sans-serif;
      font-size: 40px;
    }
    p {
      font-family: "Prez", sans-serif;
      font-size: 18px;
      color: #2b2b2b;
      letter-spacing: 1px;
      line-height: 32px;
      font-size: 25px
    }
    &:nth-child(2n) {
      background-color: #ecf0f1;
    }
  }
}
body#issues {
  .content .row {
    padding: 20px 0;
    h2 {
      font-family: "Prez", sans-serif;
      font-size: 40px;
    }
    p {
      font-family: "Prez", sans-serif;
      font-size: 18px;
      color: #2b2b2b;
      letter-spacing: 1px;
      line-height: 22px;
    }
    &:nth-child(2n) {
      background-color: #ecf0f1;
    }
  }
}
body#about {
  .content .row {
    padding: 20px 0;
    .profile {
      background-color: gray;
      height: auto;
      width: 100%;
      margin: auto;
    }
    h2 {
      font-family: "Prez", sans-serif;
    }
    li {
      font-family: "Prez", sans-serif;
      font-size: 18px;
    }
    p {
      font-family: "Prez", sans-serif;
      font-size: 18px;
      color: #2b2b2b;
      letter-spacing: 1px;
      line-height: 25px;
    }
    &:nth-child(2n) {
      background-color: #ecf0f1;
    }
  }
}
body#htv {
  .content .row {
    padding: 20px 0;
    p {
      font-family: "Prez", sans-serif;
      font-size: 18px;
      color: #2b2b2b;
      letter-spacing: 1px;
      line-height: 32px;
      margin-bottom: 20px;
      font-size: 25px;
    }
  }
}

